[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/generic_buttons/GenericButton/GenericButton.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/factories/SfxAudioStreamPlayerFactory/SfxAudioStreamPlayerFactory.tscn" type="PackedScene" id=3]

[node name="GenericButton" type="Button"]
margin_right = 192.0
margin_bottom = 20.0
theme = ExtResource( 2 )
align = 0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="SfxAudioStreamPlayerFactory" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="." to="." method="_on_GenericButton_pressed"]
[connection signal="pressed" from="." to="SfxAudioStreamPlayerFactory" method="_on_GenericButton_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_GenericButton_visibility_changed"]
